tests/baselines/reference/augmentedTypesEnum3.errors.txt
augmentedTypesEnum3.ts(16,5): error TS2432: In an enum with multiple declarations, only one declaration can omit an initializer for its first enum element.


==== augmentedTypesEnum3.ts (1 errors) ====
    namespace E {
        var t;
    }
    enum E { }
    
    enum F { }
    namespace F { var t; }
    
    namespace A {
        var o;
    }
    enum A {
        b
    }
    enum A {
        c
        ~
!!! error TS2432: In an enum with multiple declarations, only one declaration can omit an initializer for its first enum element.
    }
    namespace A {
        var p;
    }